Fix Map popover z-index under navbar

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -25,3 +25,7 @@ hr.hr-popover {
   padding: 5px 5px;
   margin: 0;
 }
+
+.ol-overlay-container {
+  z-index: 200;
+}
